@@ -1,20 +1,9 @@
 package com.rakeshgangwar.shaketomark;
 
-import android.app.Notification;
-import android.app.PendingIntent;
-import android.app.Service;
-import android.content.BroadcastReceiver;
-import android.content.Context;
-import android.content.Intent;
 import android.hardware.Sensor;
 import android.hardware.SensorEvent;
 import android.hardware.SensorEventListener;
 import android.hardware.SensorManager;
-import android.os.IBinder;
-import android.provider.Settings;
-import android.renderscript.Double2;
-import android.support.annotation.Nullable;
-import android.support.v7.app.NotificationCompat;
 
 /**
  * Created by Rakesh on 9/7/2016.
@@ -34,7 +23,7 @@ public class ShakeDetection implements SensorEventListener {
     }
 
     public interface OnShakeListener {
-        public void onShake(int count);
+        void onShake(int count);
     }
 
     @Override
@@ -48,7 +37,7 @@ public class ShakeDetection implements SensorEventListener {
             float gY=y / SensorManager.GRAVITY_EARTH;
             float gZ=z / SensorManager.GRAVITY_EARTH;
 
-            Float f=new Float(gX*gX + gY*gY + gZ*gZ);
+            Float f=Float.valueOf(gX*gX + gY*gY + gZ*gZ);
             Double d=Math.sqrt(f.doubleValue());
             float gForce=d.floatValue();
 
@@ -57,16 +46,12 @@ public class ShakeDetection implements SensorEventListener {
                 if(mShakeTimestamp+SHAKE_SLOP_TIME_MS > now){
                     return;
                 }
-
                 if(mShakeTimestamp + SHAKE_COUNT_RESET_TIME_MS < now) {
                     mShakeCount=0;
                 }
-
                 mShakeTimestamp = now;
                 mShakeCount++;
-
                 mListener.onShake(mShakeCount);
-
             }
 
         }
@@ -74,6 +59,5 @@ public class ShakeDetection implements SensorEventListener {
 
     @Override
     public void onAccuracyChanged(Sensor sensor, int accuracy) {
-
     }
 }
